# server/routes/index.js
@@ -1,0 +1,9 @@
+const users = require('./user');
+const courses = require('./course');
+const sections = require('./sections');
+
+module.exports = app => {
+    app.use('/sections', sections);
+    app.use('/courses', courses);
+    app.use('/users', users);
+};
